--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An electron UI to show the amount of money held by the Bit&Nibs proyect.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron main.js --disable-gpu",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=BitNibs --version-string.FileDescription=CE --version-string.ProductName=\"CrystalChocolate\"",
     "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=icons/png/icon.png --prune=true --out=release-builds"
@@ -16,7 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
-    "electron": "^3.0.10",
+    "electron": "2.0.14",
     "got": "^9.3.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
