To Use ejs templates.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
+    "ejs": "^2.6.1",
     "electron": "2.0.14",
+    "electron-ejs": "^1.2.0",
     "got": "^9.3.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
