--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
     "passport": "^0.4.0",
+    "passport-github2": "^0.1.11",
     "passport-jwt": "^4.0.0",
     "qs": "^6.5.2",
     "validator": "^10.9.0"
