--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-github2": "^0.1.11",
     "passport-jwt": "^4.0.0",
     "qs": "^6.5.2",
+    "superagent": "^4.1.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
