--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js --disable-gpu",
+    "react": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=BitNibs --version-string.FileDescription=CE --version-string.ProductName=\"CrystalChocolate\"",
     "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=icons/png/icon.png --prune=true --out=release-builds"
@@ -22,15 +24,18 @@
     "got": "^9.3.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
-    "passport": "^0.4.0",
-    "passport-github2": "^0.1.11",
-    "passport-jwt": "^4.0.0",
     "qs": "^6.5.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "superagent": "^4.1.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
     "electron-packager": "^12.2.0",
-    "nodemon": "^1.18.6"
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.6",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.1",
+    "webpack-devserver": "0.0.6"
   }
 }
