--- a/package.json
+++ b/package.json
@@ -32,10 +32,6 @@
   },
   "devDependencies": {
     "electron-packager": "^12.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.6",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-devserver": "0.0.6"
+    "nodemon": "^1.18.6"
   }
 }
