--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "name": "crystalchocolate",
   "version": "0.1.0",
   "description": "An electron UI to show the amount of money held by the Bit&Nibs proyect.",
-  "main": "main.js",
+  "homepage": "./",
+  "main": "src/electron-starter.js",
   "scripts": {
-    "start": "electron main.js --disable-gpu",
-    "react": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "nf start -p 3000",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron": "electron . --disable-gpu",
+    "electron-start": "node src/electron-wait-react",
+    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=icons/png/icon.png --prune=true --out=release-builds",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=BitNibs --version-string.FileDescription=CE --version-string.ProductName=\"CrystalChocolate\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=icons/png/icon.png --prune=true --out=release-builds"
+    "react-start": "react-scripts start"
   },
   "author": "Proyecto Bit&Nibs / German Lugo",
   "license": "MIT",
@@ -20,18 +25,19 @@
     "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "electron": "2.0.14",
-    "electron-ejs": "^1.2.0",
+    "foreman": "^2.0.0",
     "got": "^9.3.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
     "qs": "^6.5.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-scripts": "0.8.5",
     "superagent": "^4.1.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "electron-packager": "^12.2.0",
-    "nodemon": "^1.18.6"
+    "electron-ejs": "^1.2.0",
+    "electron-packager": "^12.2.0"
   }
 }
