--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron": "2.0.14",
     "foreman": "^3.0.1",
     "got": "^9.3.2",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
     "qs": "^6.5.2",
@@ -34,6 +35,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "0.8.5",
     "superagent": "^4.1.0",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
